data/derived/fa15/progs/unify/prog3445.ml.out
Characters 176-182:
  |h'::t' -> if h+h' > 10 then addHelper t t' @ [1 + h' + h] else addHelper t t'@[h'+h]
                                                                                 ^^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
